kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gaming-app-namespace
  labels:
    name: gaming-app-namespace
