kubernetes/gaming-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaming-app-deployment
  namespace: gaming-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaming-app
  template:
    metadata:
      labels:
        app: gaming-app
    spec:
      containers:
        - name: gaming-app
          image: tangeleski/gaming-app:latest
          ports:
            - containerPort: 80
