kubernetes/gaming-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming-app-service
  namespace: gaming-app-namespace
spec:
  selector:
    app: gaming-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
